--- a/js/cui/index.html
+++ b/js/cui/index.html
@@ -11,6 +11,6 @@
 </html>
 <script>
     
-let editor = new NEditorUI(document.getElementById("editor"));
+let editor = new NCharUI(document.getElementById("editor"));
 
 </script>
