--- a/js/cui/index.html
+++ b/js/cui/index.html
@@ -10,7 +10,9 @@
     </body>
 </html>
 <script>
-    
-let editor = new NCharUI(document.getElementById("editor"));
+
+
+let editor = new NCharUI(document.getElementById("editor"),"Neknaj VE CUI console\n\n>");
+console.log("fewa",editor.getinput());
 
 </script>
