--- a/js/index.html
+++ b/js/index.html
@@ -135,18 +135,31 @@ video:
     call main
 `;
 code = `
-ssp 0
+ssp 1
 jmp #callmain
 
 main:
-    push 4
-    push 5
-    add
-    push 5
-    push 5
-    mul
-    sub
-    out
+    push 0
+    push 0
+    popvar
+    #whilebegan1:
+        push 0
+        pushvar
+        push NaN
+        gret
+        ifjmp #whileend1
+        push 0
+        pushvar
+        pop
+        out
+        push NaN
+        push 0
+        pushvar
+        add
+        push 0
+        popvar
+        jmp #whilebegan1
+    #whileend1:
     ret
 #callmain:
     call main
